--- a/Botones/app/src/main/AndroidManifest.xml
+++ b/Botones/app/src/main/AndroidManifest.xml
@@ -13,13 +13,21 @@
         android:theme="@style/Theme.Botones"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SegundaActivity"
             android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
 
             <meta-data
                 android:name="android.app.lib_name"
