--- a/Parcial2/app/src/main/AndroidManifest.xml
+++ b/Parcial2/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:theme="@style/Theme.Parcial2"
         tools:targetApi="31">
         <activity
-            android:name=".MostarPreferencias"
+            android:name=".ViewItem"
             android:exported="false" />
         <activity
-            android:name=".SolicitarPreferencias"
+            android:name=".AddItem"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
