--- a/Clase6Marzo/app/src/main/AndroidManifest.xml
+++ b/Clase6Marzo/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Clase6Marzo"
         tools:targetApi="31">
         <activity
+            android:name=".ViewPreferences"
+            android:exported="false" />
+        <activity
             android:name=".ListaDeJuegos"
             android:exported="false" />
         <activity
